src/host/pantilt_in_ada/specs/libusb_1_0_libusb_h.ads


   type libusb_config_descriptor is record
      bLength : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:642
      bDescriptorType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:647
      wTotalLength : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:650
      bNumInterfaces : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:653
      bConfigurationValue : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:656
      iConfiguration : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:659
      bmAttributes : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:662
      MaxPower : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:667
      c_interface : access constant libusb_interface;  -- /usr/include/libusb-1.0/libusb.h:671
      extra : access unsigned_char;  -- /usr/include/libusb-1.0/libusb.h:675
      extra_length : aliased int;  -- /usr/include/libusb-1.0/libusb.h:678
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_config_descriptor);  -- /usr/include/libusb-1.0/libusb.h:640

   type libusb_ss_endpoint_companion_descriptor is record
      bLength : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:690
      bDescriptorType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:695
      bMaxBurst : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:700
      bmAttributes : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:706
      wBytesPerInterval : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:710
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_ss_endpoint_companion_descriptor);  -- /usr/include/libusb-1.0/libusb.h:687

   type libusb_bos_dev_capability_descriptor_dev_capability_data_array is array (0 .. -1) of aliased stdint_h.uint8_t;
   type libusb_bos_dev_capability_descriptor is record
      bLength : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:720
      bDescriptorType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:724
      bDevCapabilityType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:726
      dev_capability_data : aliased libusb_bos_dev_capability_descriptor_dev_capability_data_array;  -- /usr/include/libusb-1.0/libusb.h:732
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_bos_dev_capability_descriptor);  -- /usr/include/libusb-1.0/libusb.h:718

   type libusb_bos_descriptor_dev_capability_array is array (0 .. -1) of access libusb_bos_dev_capability_descriptor;
   type libusb_bos_descriptor is record
      bLength : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:744
      bDescriptorType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:749
      wTotalLength : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:752
      bNumDeviceCaps : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:756
      dev_capability : aliased libusb_bos_descriptor_dev_capability_array;  -- /usr/include/libusb-1.0/libusb.h:763
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_bos_descriptor);  -- /usr/include/libusb-1.0/libusb.h:742

   type libusb_usb_2_0_extension_descriptor is record
      bLength : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:775
      bDescriptorType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:780
      bDevCapabilityType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:785
      bmAttributes : aliased stdint_h.uint32_t;  -- /usr/include/libusb-1.0/libusb.h:791
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_usb_2_0_extension_descriptor);  -- /usr/include/libusb-1.0/libusb.h:773

   type libusb_ss_usb_device_capability_descriptor is record
      bLength : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:801
      bDescriptorType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:806
      bDevCapabilityType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:811
      bmAttributes : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:817
      wSpeedSupported : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:821
      bFunctionalitySupport : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:827
      bU1DevExitLat : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:830
      bU2DevExitLat : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:833
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_ss_usb_device_capability_descriptor);  -- /usr/include/libusb-1.0/libusb.h:799

   type libusb_container_id_descriptor_ContainerID_array is array (0 .. 15) of aliased stdint_h.uint8_t;
   type libusb_container_id_descriptor is record
      bLength : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:843
      bDescriptorType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:848
      bDevCapabilityType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:853
      bReserved : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:856
      ContainerID : aliased libusb_container_id_descriptor_ContainerID_array;  -- /usr/include/libusb-1.0/libusb.h:859
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_container_id_descriptor);  -- /usr/include/libusb-1.0/libusb.h:841

   type libusb_control_setup is record
      bmRequestType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:870
      bRequest : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:877
      wValue : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:880
      wIndex : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:884
      wLength : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:887
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_control_setup);  -- /usr/include/libusb-1.0/libusb.h:864

   --  skipped empty struct libusb_context

   --  skipped empty struct libusb_device

   --  skipped empty struct libusb_device_handle

   --  skipped empty struct libusb_hotplug_callback

   type libusb_version is record
      major : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:904
      minor : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:907
      micro : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:910
      nano : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:913
      rc : Interfaces.C.Strings.chars_ptr;  -- /usr/include/libusb-1.0/libusb.h:916
      describe : Interfaces.C.Strings.chars_ptr;  -- /usr/include/libusb-1.0/libusb.h:919
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_version);  -- /usr/include/libusb-1.0/libusb.h:902

   type libusb_speed is 
     (LIBUSB_SPEED_UNKNOWN,
      LIBUSB_SPEED_LOW,
      LIBUSB_SPEED_FULL,
      LIBUSB_SPEED_HIGH,
      LIBUSB_SPEED_SUPER);
   pragma Convention (C, libusb_speed);  -- /usr/include/libusb-1.0/libusb.h:972

   subtype libusb_supported_speed is unsigned;
   LIBUSB_LOW_SPEED_OPERATION : constant libusb_supported_speed := 1;
   LIBUSB_FULL_SPEED_OPERATION : constant libusb_supported_speed := 2;
   LIBUSB_HIGH_SPEED_OPERATION : constant libusb_supported_speed := 4;
   LIBUSB_SUPER_SPEED_OPERATION : constant libusb_supported_speed := 8;  -- /usr/include/libusb-1.0/libusb.h:993

   subtype libusb_usb_2_0_extension_attributes is unsigned;
   LIBUSB_BM_LPM_SUPPORT : constant libusb_usb_2_0_extension_attributes := 2;  -- /usr/include/libusb-1.0/libusb.h:1012

   subtype libusb_ss_usb_device_capability_attributes is unsigned;
   LIBUSB_BM_LTM_SUPPORT : constant libusb_ss_usb_device_capability_attributes := 2;  -- /usr/include/libusb-1.0/libusb.h:1022

   subtype libusb_bos_type is unsigned;
   LIBUSB_BT_WIRELESS_USB_DEVICE_CAPABILITY : constant libusb_bos_type := 1;
   LIBUSB_BT_USB_2_0_EXTENSION : constant libusb_bos_type := 2;
   LIBUSB_BT_SS_USB_DEVICE_CAPABILITY : constant libusb_bos_type := 3;
   LIBUSB_BT_CONTAINER_ID : constant libusb_bos_type := 4;  -- /usr/include/libusb-1.0/libusb.h:1030

   subtype libusb_error is unsigned;
   LIBUSB_SUCCESS : constant libusb_error := 0;
   LIBUSB_ERROR_IO : constant libusb_error := -1;
   LIBUSB_ERROR_INVALID_PARAM : constant libusb_error := -2;
   LIBUSB_ERROR_ACCESS : constant libusb_error := -3;
   LIBUSB_ERROR_NO_DEVICE : constant libusb_error := -4;
   LIBUSB_ERROR_NOT_FOUND : constant libusb_error := -5;
   LIBUSB_ERROR_BUSY : constant libusb_error := -6;
   LIBUSB_ERROR_TIMEOUT : constant libusb_error := -7;
   LIBUSB_ERROR_OVERFLOW : constant libusb_error := -8;
   LIBUSB_ERROR_PIPE : constant libusb_error := -9;
   LIBUSB_ERROR_INTERRUPTED : constant libusb_error := -10;
   LIBUSB_ERROR_NO_MEM : constant libusb_error := -11;
   LIBUSB_ERROR_NOT_SUPPORTED : constant libusb_error := -12;
   LIBUSB_ERROR_OTHER : constant libusb_error := -99;  -- /usr/include/libusb-1.0/libusb.h:1051

   type libusb_transfer_status is 
     (LIBUSB_TRANSFER_COMPLETED,
      LIBUSB_TRANSFER_ERROR,
      LIBUSB_TRANSFER_TIMED_OUT,
      LIBUSB_TRANSFER_CANCELLED,
      LIBUSB_TRANSFER_STALL,
      LIBUSB_TRANSFER_NO_DEVICE,
      LIBUSB_TRANSFER_OVERFLOW);
   pragma Convention (C, libusb_transfer_status);  -- /usr/include/libusb-1.0/libusb.h:1103

   subtype libusb_transfer_flags is unsigned;
   LIBUSB_TRANSFER_SHORT_NOT_OK : constant libusb_transfer_flags := 1;
   LIBUSB_TRANSFER_FREE_BUFFER : constant libusb_transfer_flags := 2;
   LIBUSB_TRANSFER_FREE_TRANSFER : constant libusb_transfer_flags := 4;
   LIBUSB_TRANSFER_ADD_ZERO_PACKET : constant libusb_transfer_flags := 8;  -- /usr/include/libusb-1.0/libusb.h:1133

   type libusb_iso_packet_descriptor is record
      length : aliased unsigned;  -- /usr/include/libusb-1.0/libusb.h:1176
      actual_length : aliased unsigned;  -- /usr/include/libusb-1.0/libusb.h:1179
      status : aliased libusb_transfer_status;  -- /usr/include/libusb-1.0/libusb.h:1182
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_iso_packet_descriptor);  -- /usr/include/libusb-1.0/libusb.h:1174

   type libusb_transfer_cb_fn is access procedure (arg1 : System.Address);
   pragma Convention (C, libusb_transfer_cb_fn);  -- /usr/include/libusb-1.0/libusb.h:1196

   type libusb_transfer_iso_packet_desc_array is array (0 .. -1) of aliased libusb_iso_packet_descriptor;
   type libusb_transfer is record
      dev_handle : System.Address;  -- /usr/include/libusb-1.0/libusb.h:1206
      flags : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:1209
      endpoint : aliased unsigned_char;  -- /usr/include/libusb-1.0/libusb.h:1212
      c_type : aliased unsigned_char;  -- /usr/include/libusb-1.0/libusb.h:1215
      timeout : aliased unsigned;  -- /usr/include/libusb-1.0/libusb.h:1219
      status : aliased libusb_transfer_status;  -- /usr/include/libusb-1.0/libusb.h:1228
      length : aliased int;  -- /usr/include/libusb-1.0/libusb.h:1231
      actual_length : aliased int;  -- /usr/include/libusb-1.0/libusb.h:1236
      callback : libusb_transfer_cb_fn;  -- /usr/include/libusb-1.0/libusb.h:1240
      user_data : System.Address;  -- /usr/include/libusb-1.0/libusb.h:1243
      buffer : access unsigned_char;  -- /usr/include/libusb-1.0/libusb.h:1246
      num_iso_packets : aliased int;  -- /usr/include/libusb-1.0/libusb.h:1250
      iso_packet_desc : aliased libusb_transfer_iso_packet_desc_array;  -- /usr/include/libusb-1.0/libusb.h:1257
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_transfer);  -- /usr/include/libusb-1.0/libusb.h:1204
